--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,8 @@
             app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_search"
             app:iconGravity="textStart"
-            app:iconTint="@color/black" />
+            app:iconTint="@color/black"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/library"
@@ -69,7 +70,8 @@
             app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_media"
             app:iconGravity="textStart"
-            app:iconTint="@color/black" />
+            app:iconTint="@color/black"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/settings"
@@ -86,7 +88,8 @@
             app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_settings"
             app:iconGravity="textStart"
-            app:iconTint="@color/black" />
+            app:iconTint="@color/black"
+            android:textAllCaps="false"/>
 
     </LinearLayout>
 
