--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="spaceText">40dp</dimen>
     <dimen name="settingText">16sp</dimen>
     <dimen name="bottomMargin">28dp</dimen>
+    <dimen name="textAllign">21dp</dimen>
 </resources>
