--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -124,7 +124,8 @@
             android:layout_marginStart="@dimen/allign"
             android:layout_marginEnd="@dimen/allign"
             android:layout_marginTop="@dimen/textAllign"
-            android:layout_marginBottom="@dimen/textAllign"/>
+            android:layout_marginBottom="@dimen/textAllign"
+            android:textColor="@color/black"/>
 
 
 
