--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/YP_Blue"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    style="@style/mainBack">
 
     <TextView
         android:id="@+id/titleText"
@@ -17,6 +16,7 @@
         android:textStyle="bold"
         android:textSize="@dimen/buttonText"
         android:text="@string/app_name"
+        android:fontFamily="@font/ys_display_medium"
         android:gravity="start|top"
         android:padding="@dimen/allign"
         android:layout_marginTop="14dp"
@@ -37,59 +37,21 @@
 
         <Button
             android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/allign"
-            android:layout_marginEnd="@dimen/allign"
-            android:layout_marginBottom="@dimen/allign"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:foreground="?android:attr/selectableItemBackground"
             android:text="@string/search"
-            android:textColor="@color/black"
-            android:textSize="@dimen/buttonText"
-            app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_search"
-            app:iconGravity="textStart"
-            app:iconTint="@color/black"
-            android:textAllCaps="false"/>
+            style="@style/mainButton"/>
 
         <Button
             android:id="@+id/library"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/allign"
-            android:layout_marginEnd="@dimen/allign"
-            android:layout_marginBottom="@dimen/allign"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:foreground="?android:attr/selectableItemBackground"
             android:text="@string/library"
-            android:textColor="@color/black"
-            android:textSize="@dimen/buttonText"
-            app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_media"
-            app:iconGravity="textStart"
-            app:iconTint="@color/black"
-            android:textAllCaps="false"/>
+            style="@style/mainButton"/>
 
         <Button
             android:id="@+id/settings"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/allign"
-            android:layout_marginEnd="@dimen/allign"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:foreground="?android:attr/selectableItemBackground"
             android:text="@string/settings"
-            android:textColor="@color/black"
-            android:textSize="@dimen/buttonText"
-            app:cornerRadius="@dimen/buttonRadius"
             app:icon="@drawable/ic_settings"
-            app:iconGravity="textStart"
-            app:iconTint="@color/black"
-            android:textAllCaps="false"/>
+            style="@style/mainButton"/>
 
     </LinearLayout>
 
