--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,60 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".SearchActivity"
+    android:background="?attr/background">
+
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="@dimen/buttonText"
+        android:layout_height="@dimen/buttonText"
+        android:importantForAccessibility="no"
+        android:src="@drawable/ic_back"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/text"
+        app:layout_constraintStart_toStartOf="parent"
+        style="@style/icTheme"/>
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        android:textSize="@dimen/buttonText"
+        android:fontFamily="@font/ys_display_medium"
+        android:gravity="start|top"
+        android:layout_marginStart="@dimen/bottomMargin"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnBack"
+        style="@style/tgToggle"/>
+
+    <EditText
+        android:id="@+id/editTextSearch"
+        style="@style/searchBackground"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="@dimen/allign"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="@dimen/allign"
+        android:background="@drawable/edit_text_background"
+        android:drawableStart="@drawable/ic_search"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/ys_display_regular"
+        android:hint="@string/search"
+        android:paddingStart="@dimen/allign"
+        android:paddingEnd="@dimen/allign"
+        android:textColor="@color/black"
+        android:textSize="@dimen/settingText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintWidth_percent="0.9"
+        android:inputType="text" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
