--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="settingText">16sp</dimen>
     <dimen name="bottomMargin">28dp</dimen>
     <dimen name="textAllign">21dp</dimen>
+    <dimen name="lHeight">0dp</dimen>
 </resources>
