--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,31 +8,19 @@
     tools:context=".SearchActivity"
     android:background="?attr/background">
 
-    <ImageView
-        android:id="@+id/btnBack"
-        android:layout_width="@dimen/buttonText"
-        android:layout_height="@dimen/buttonText"
-        android:importantForAccessibility="no"
-        android:src="@drawable/ic_back"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/text"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/icTheme"/>
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbarTop"
+        style="@style/tnSwitch"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/downToolbar"
         android:textSize="@dimen/buttonText"
-        android:fontFamily="@font/ys_display_medium"
-        android:gravity="start|top"
-        android:layout_marginStart="@dimen/bottomMargin"
-        android:layout_marginTop="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnBack"
-        style="@style/tgToggle"/>
+        app:navigationIcon="@drawable/ic_back"
+        app:title="@string/search"
+        app:titleMarginStart="12dp"
+        app:titleTextAppearance="@style/ToolbarTitleAppearance" />
 
     <EditText
         android:id="@+id/editTextSearch"
@@ -40,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="36dp"
         android:layout_marginStart="@dimen/allign"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/allign"
         android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_search"
@@ -48,17 +36,14 @@
         android:fontFamily="@font/ys_display_regular"
         android:hint="@string/search"
         android:paddingStart="@dimen/allign"
-        android:paddingEnd="@dimen/allign"
+        android:paddingEnd="12dp"
         android:textColor="@color/black"
         android:textSize="@dimen/settingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarTop"
         app:layout_constraintWidth_percent="0.9"
         android:inputType="text" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
