--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -3,8 +3,6 @@
 
     <style name="settingsPunkt">
         <item name="android:textColor">@color/white</item>
-        <item name="android:layout_marginBottom">@dimen/textAllign</item>
-        <item name="android:layout_marginTop">@dimen/textAllign</item>
         <item name="android:layout_marginEnd">@dimen/allign</item>
         <item name="android:layout_marginStart">@dimen/allign</item>
         <item name="android:textSize">@dimen/settingText</item>
@@ -12,16 +10,15 @@
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:drawableTint">@color/YP_Gray</item>
-        <item name="android:drawablePadding">12dp</item>
         <item name="android:backgroundTint">@color/white</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
-    <style name="tgToggle">
-        <item name="android:textColor">@color/white</item>
+    <style name="tnSwitch">
+        <item name="titleTextColor">@color/white</item>
+        <item name="navigationIconTint">@color/white</item>
     </style>
 
     <style name="icTheme">
