--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="mainButton">
+    <style name="mainButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:textAllCaps">false</item>
         <item name="iconTint">@color/black</item>
         <item name="iconGravity">textStart</item>
@@ -10,6 +10,7 @@
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:layout_marginStart">@dimen/allign</item>
         <item name="android:layout_marginEnd">@dimen/allign</item>
         <item name="android:layout_marginBottom">@dimen/allign</item>
@@ -20,29 +21,26 @@
 
     <style name="settingsPunkt">
         <item name="android:textColor">@color/black</item>
-        <item name="android:layout_marginBottom">@dimen/textAllign</item>
-        <item name="android:layout_marginTop">@dimen/textAllign</item>
-        <item name="android:layout_marginEnd">@dimen/allign</item>
-        <item name="android:layout_marginStart">@dimen/allign</item>
         <item name="android:textSize">@dimen/settingText</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:drawableTint">@color/YP_Gray</item>
-        <item name="android:drawablePadding">12dp</item>
         <item name="android:backgroundTint">@color/white</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
-    <style name="tgToggle">
-        <item name="android:textColor">@color/black</item>
+    <style name="tnSwitch">
+        <item name="titleTextColor">@color/black</item>
+        <item name="navigationIconTint">@color/black</item>
     </style>
 
-    <style name="icTheme">
-        <item name="tint">@color/black</item>
+    <style name="ToolbarTitleAppearance">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/buttonText</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="mainBack">
