--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -34,4 +34,17 @@
         <item name="android:textColorHint">@color/searchIcon</item>
         <item name="android:drawableTint">@color/searchIcon</item>
     </style>
+
+    <style name="trackNameSearch">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:text">@string/testString</item>
+        <item name="android:textSize">@dimen/trackName</item>
+    </style>
+    <style name="artistNameSearch">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:text">@string/testString</item>
+        <item name="android:textSize">@dimen/artistName</item>
+    </style>
 </resources>
