--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="textAllign">21dp</dimen>
     <dimen name="lHeight">0dp</dimen>
     <dimen name="downToolbar">56dp</dimen>
+    <dimen name="cover_corner_radius">2dp</dimen>
+    <dimen name="miniCoverSize">45dp</dimen>
+    <dimen name="trackName">16sp</dimen>
+    <dimen name="artistName">11sp</dimen>
 </resources>
